# polite-http

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/polite_http/: __init__.py  http_client.py
tests/: test_http_client.py
